# bvh2d

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aabb.rs  axis.rs  lib.rs  utils.rs
src/bsh/: bsh_impl.rs  iter.rs  mod.rs
src/bvh2d/: bvh2d_impl.rs  iter.rs  mod.rs
